[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[metadata]
package_name = edge_pydb
description = Python based database for CARMA EDGE
long_description = Interface with CARMA EDGE database
author = Tony Wong and Yufeng Luo
author_email = tonywong94@gmail.com
license = BSD
url = 
edit_on_github = False
github_project = edge_pydb

[entry_points]
