[metadata]
name = edge_pydb
description = Python based database for CARMA EDGE
long_description = file: README.md
long_description_content_type = text/markdown
author = Tony Wong and Yufeng Luo
author_email = wongt@illinois.edu
license = BSD 3-Clause License
url = https://github.com/tonywong94/edge_pydb
edit_on_github = False
github_project = tonywong94/edge_pydb
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = 
    edge_pydb
    edge_pydb.img_califa
    edge_pydb.img_comom
install_requires =
    numpy
    scipy
    astropy
    pandas
    radio_beam
    matplotlib
    requests
    h5py
    uncertainties
scripts =
	bin/edge_db_gen_cogrid
	bin/edge_db_gen_ifugrid

[options.extras_require]
do_pipe3d =
    pyFIT3D
    photutils
    reproject
    CO_conversion_factor
docs =
    sphinx-astropy
    matplotlib

[options.package_data]
edge_pydb =
    dat_*/*/*.csv
    img_*/*.hdf5
    _config.json

